tests/toylang/pos/000139_cdrc2.toylang
program a = { while 0 do while a do sleep; } .
