tests/toylang/neg/001585_mutation.toylang
program a = { while a bool sleep; } .
